@@ -16,30 +16,83 @@
  */
 package org.apache.kafka.connect.transforms;
 
+import org.apache.kafka.common.utils.AppInfoParser;
 import org.apache.kafka.connect.data.Schema;
 import org.apache.kafka.connect.data.SchemaBuilder;
 import org.apache.kafka.connect.data.Struct;
 import org.apache.kafka.connect.sink.SinkRecord;
-import org.junit.After;
-import org.junit.Test;
+
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 
 import java.util.HashMap;
 import java.util.Map;
+import java.util.stream.Stream;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
 
 public class ReplaceFieldTest {
-    private ReplaceField<SinkRecord> xform = new ReplaceField.Value<>();
+    private final ReplaceField<SinkRecord> xformKey = new ReplaceField.Key<>();
+    private final ReplaceField<SinkRecord> xform = new ReplaceField.Value<>();
 
-    @After
+    public static Stream<Arguments> data() {
+        return Stream.of(
+                Arguments.of(false, null),
+                Arguments.of(true, 42)
+        );
+    }
+
+    @AfterEach
     public void teardown() {
         xform.close();
     }
 
     @Test
+    public void tombstoneSchemaless() {
+        final Map<String, String> props = new HashMap<>();
+        props.put("include", "abc,foo");
+        props.put("renames", "abc:xyz,foo:bar");
+
+        xform.configure(props);
+
+        final SinkRecord record = new SinkRecord("test", 0, null, null, null, null, 0);
+        final SinkRecord transformedRecord = xform.apply(record);
+
+        assertNull(transformedRecord.value());
+        assertNull(transformedRecord.valueSchema());
+    }
+
+    @Test
+    public void tombstoneWithSchema() {
+        final Map<String, String> props = new HashMap<>();
+        props.put("include", "abc,foo");
+        props.put("renames", "abc:xyz,foo:bar");
+
+        xform.configure(props);
+
+        final Schema schema = SchemaBuilder.struct()
+            .field("dont", Schema.STRING_SCHEMA)
+            .field("abc", Schema.INT32_SCHEMA)
+            .field("foo", Schema.BOOLEAN_SCHEMA)
+            .field("etc", Schema.STRING_SCHEMA)
+            .build();
+
+        final SinkRecord record = new SinkRecord("test", 0, null, null, schema, null, 0);
+        final SinkRecord transformedRecord = xform.apply(record);
+
+        assertNull(transformedRecord.value());
+        assertEquals(schema, transformedRecord.valueSchema());
+    }
+
+    @SuppressWarnings("unchecked")
+    @Test
     public void schemaless() {
         final Map<String, String> props = new HashMap<>();
-        props.put("blacklist", "dont");
+        props.put("exclude", "dont");
         props.put("renames", "abc:xyz,foo:bar");
 
         xform.configure(props);
@@ -53,7 +106,7 @@ public class ReplaceFieldTest {
         final SinkRecord record = new SinkRecord("test", 0, null, null, null, value, 0);
         final SinkRecord transformedRecord = xform.apply(record);
 
-        final Map updatedValue = (Map) transformedRecord.value();
+        final Map<String, Object> updatedValue = (Map<String, Object>) transformedRecord.value();
         assertEquals(3, updatedValue.size());
         assertEquals(42, updatedValue.get("xyz"));
         assertEquals(true, updatedValue.get("bar"));
@@ -63,7 +116,7 @@ public class ReplaceFieldTest {
     @Test
     public void withSchema() {
         final Map<String, String> props = new HashMap<>();
-        props.put("whitelist", "abc,foo");
+        props.put("include", "abc,foo");
         props.put("renames", "abc:xyz,foo:bar");
 
         xform.configure(props);
@@ -87,8 +140,102 @@ public class ReplaceFieldTest {
         final Struct updatedValue = (Struct) transformedRecord.value();
 
         assertEquals(2, updatedValue.schema().fields().size());
-        assertEquals(new Integer(42), updatedValue.getInt32("xyz"));
+        assertEquals(Integer.valueOf(42), updatedValue.getInt32("xyz"));
         assertEquals(true, updatedValue.getBoolean("bar"));
     }
 
+    @Test
+    public void testIncludeBackwardsCompatibility() {
+        final Map<String, String> props = new HashMap<>();
+        props.put("whitelist", "abc,foo");
+        props.put("renames", "abc:xyz,foo:bar");
+
+        xform.configure(props);
+
+        final SinkRecord record = new SinkRecord("test", 0, null, null, null, null, 0);
+        final SinkRecord transformedRecord = xform.apply(record);
+
+        assertNull(transformedRecord.value());
+        assertNull(transformedRecord.valueSchema());
+    }
+
+    @SuppressWarnings("unchecked")
+    @Test
+    public void testExcludeBackwardsCompatibility() {
+        final Map<String, String> props = new HashMap<>();
+        props.put("blacklist", "dont");
+        props.put("renames", "abc:xyz,foo:bar");
+
+        xform.configure(props);
+
+        final Map<String, Object> value = new HashMap<>();
+        value.put("dont", "whatever");
+        value.put("abc", 42);
+        value.put("foo", true);
+        value.put("etc", "etc");
+
+        final SinkRecord record = new SinkRecord("test", 0, null, null, null, value, 0);
+        final SinkRecord transformedRecord = xform.apply(record);
+
+        final Map<String, Object> updatedValue = (Map<String, Object>) transformedRecord.value();
+        assertEquals(3, updatedValue.size());
+        assertEquals(42, updatedValue.get("xyz"));
+        assertEquals(true, updatedValue.get("bar"));
+        assertEquals("etc", updatedValue.get("etc"));
+    }
+
+    @Test
+    public void testReplaceFieldVersionRetrievedFromAppInfoParser() {
+        assertEquals(AppInfoParser.getVersion(), xform.version());
+    }
+
+    @ParameterizedTest
+    @MethodSource("data")
+    public void testReplaceNullWithDefaultConfigOnValue(boolean replaceNullWithDefault, Object expectedValue) {
+        final Map<String, String> props = new HashMap<>();
+        props.put("include", "abc");
+        props.put("renames", "abc:optional_with_default");
+        props.put("replace.null.with.default", String.valueOf(replaceNullWithDefault));
+
+        xform.configure(props);
+
+        final Schema valueSchema = SchemaBuilder.struct()
+                .field("abc", SchemaBuilder.int32().optional().defaultValue(42).build())
+                .build();
+
+        final Struct value = new Struct(valueSchema).put("abc", null);
+
+        final SinkRecord record = new SinkRecord("test", 0, null, null, valueSchema, value, 0);
+        final SinkRecord transformedRecord = xform.apply(record);
+
+        final Struct updatedValue = (Struct) transformedRecord.value();
+
+        assertEquals(1, updatedValue.schema().fields().size());
+        assertEquals(expectedValue, updatedValue.getWithoutDefault("optional_with_default"));
+    }
+
+    @ParameterizedTest
+    @MethodSource("data")
+    public void testReplaceNullWithDefaultConfigOnKey(boolean replaceNullWithDefault, Object expectedValue) {
+        final Map<String, String> props = new HashMap<>();
+        props.put("include", "abc");
+        props.put("renames", "abc:optional_with_default");
+        props.put("replace.null.with.default", String.valueOf(replaceNullWithDefault));
+
+        xformKey.configure(props);
+
+        final Schema keySchema = SchemaBuilder.struct()
+                .field("abc", SchemaBuilder.int32().optional().defaultValue(42).build())
+                .build();
+
+        final Struct key = new Struct(keySchema).put("abc", null);
+
+        final SinkRecord record = new SinkRecord("test", 0, keySchema, key, null, null, 0);
+        final SinkRecord transformedRecord = xformKey.apply(record);
+
+        final Struct updatedKey = (Struct) transformedRecord.key();
+
+        assertEquals(1, updatedKey.schema().fields().size());
+        assertEquals(expectedValue, updatedKey.getWithoutDefault("optional_with_default"));
+    }
 }
